--- a/index.html
+++ b/index.html
@@ -948,5 +948,13 @@ pip install -r requirements.txt</pre>
             </div>
         </div>
     </footer>
+
+    <script>
+        const themeToggle = document.getElementById('theme-toggle');
+
+        themeToggle.addEventListener('click', () => {
+            document.documentElement.classList.toggle('dark');
+        });
+    </script>
 </body>
 </html>
